upp-concept-events-pipeline-provisioner/cloudformation/security-and-parameter-group-provisioner.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: This template deploys a security group and a parameter group to be used by UPP Concept Events RDS Store

Metadata:
    AWS::CloudFormation::Interface:
        - Label: FT standard tagging
          Parameters:
             - TagEnvironment
             - TagTeamDL
             - TagSystemCode
             - TagIpCode
             - TagDescription

Parameters:
    DBVPC:
        Description: Choose which VPC the Aurora DB should be deployed TagStopSchedule
        Type: AWS::EC2::VPC::Id

    EnvironmentName:
        Description: An environment name that will be prefixed to resource names
        Type: String

    EnvironmentTag:
        Description: Tag detail for the Environment; d for team clusters, t for staging and p for production
        Type: String
        AllowedValues:
            - 'd'
            - 't'
            - 'p'
        Default: d

    TagTeamDL:
        Description: Tag of the TeamDL
        Type: String
        AllowedPattern: ^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$
        ConstraintDescription: There must be a valid email address for the TeamDL
        Default: universal.publishing.platform@ft.com

    TagSystemCode:
        Description: The system code for the environment
        Type: String
        Default: upp

    TagIpCode:
        Description: The environment ipCode
        Type: String
        AllowedPattern: '[P][0-9]*'
        Default: P196

    TagDescription:
        Description: Tag detail for the describing the instance
        Type: String
        Default: UPP Concept Events RDS Group

Resources:
    ConceptEventsSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupName: !Join ["" , ["upp-concept-events-rds-security-group-", !Ref EnvironmentName]]
        GroupDescription: "Security group for UPP Concept Events RDS store"
        VpcId: !Ref DBVPC
        Tags:
            - Key: Name
              Value: !Join ["" , ["UPP Concept Events RDS Security Group ", !Ref EnvironmentName]]
            - Key: environment
              Value: !Ref EnvironmentTag
            - Key: teamDL
              Value: !Ref TagTeamDL
            - Key: systemCode
              Value: !Ref TagSystemCode
            - Key: ipCode
              Value: !Ref TagIpCode
            - Key: description
              Value: "Security group for UPP Concept Events RDS store"
        SecurityGroupIngress:
            # OSB + LDNWebPerf
            - IpProtocol: tcp
              FromPort: 3306
              ToPort: 3306
              CidrIp: 82.136.1.214/32
            # SSH
            - IpProtocol: tcp
              FromPort: 22
              ToPort: 22
              CidrIp: 82.136.1.214/32
            # Park Royal
            - IpProtocol: tcp
              FromPort: 3306
              ToPort: 3306
              CidrIp: 213.216.148.1/32
            # XP - Cluj Office
            - IpProtocol: tcp
              FromPort: 3306
              ToPort: 3306
              CidrIp: 194.117.242.0/23
            # EU VPN Client
            - IpProtocol: tcp
              FromPort: 3306
              ToPort: 3306
              CidrIp: 62.25.64.1/32
            # US VPN Client
            - IpProtocol: tcp
              FromPort: 3306
              ToPort: 3306
              CidrIp: 64.210.200.1/32

    ConceptEventsParameterGroup:
      Type: AWS::RDS::DBParameterGroup
      Properties:
        Description: 'UPP Concept Events RDS Parameter Group'
        Family: aurora5.6
        Parameters:
          innodb_large_prefix: 1
          innodb_file_format: Barracuda
          local_infile: 1
        Tags:
            - Key: Name
              Value: !Join ["" , ["UPP Concept Events RDS Parameter Group ", !Ref EnvironmentName]]
            - Key: environment
              Value: !Ref EnvironmentTag
            - Key: teamDL
              Value: !Ref TagTeamDL
            - Key: systemCode
              Value: !Ref TagSystemCode
            - Key: ipCode
              Value: !Ref TagIpCode
            - Key: description
              Value: 'Parameter Group for Concept Events RDS Store'

Outputs:
  ConceptEventsSecurityGroupId:
    Description: Id of newly created security group
    Value: !Ref ConceptEventsSecurityGroup
  ConceptEventsParameterGroupName:
    Description: Name of the newly created parameter group
    Value: !Ref ConceptEventsParameterGroup
